@@ -1,6 +1,11 @@
 Changes from jTDS 1.3.0
 =======================
 
+05/16/2013 - Holger Rehn
+ o Added range check to class BlobBuffer as proposed by Benedict Elliott Smith.
+ o Applied patch for explicitly creating an in-memory BlobBuffer provided by
+   Benedict Elliott Smith.
+
 05/03/2013 - Holger Rehn
  o Fixed a bug that could cause the statement cache to be disabled. 
  o Improved statement cache performance.
